Implement dynamic clock display in footer

--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
       <div class="d-flex align-items-center gap-3 display-6 me-1">
         <div class="footer-divider"></div>
         <img src="assets/images/clock-icon.svg" alt="clock" />
-        <span>22:09:22 PM</span>
+        <span id="clock"></span>
       </div>
     </div>
     <script src="js/main.js"></script>
