--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,11 @@
             class="dialog-body d-flex flex-column justify-content-center align-items-center bg-white"
           >
             <div class="mb-2">
-              <img src="assets/images/working-cat5.png" alt="cat working" />
+              <img
+                src="assets/images/working-cat5.png"
+                alt="cat working"
+                class="services-image"
+              />
             </div>
             <div
               class="d-flex flex-column justify-content-between align-items-center gap-3"
